--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,7 @@
 main:
-  components_repository: "https://github.com/udacity/nd0821-c2-build-model-workflow-starter.git#components"
+  components_repository: "https://github.com/ThiagoGrabe/nd0821-c2-build-model-workflow-starter.git#components"
   # All the intermediate files will be copied to this directory at the end of the run.
+  source_repository: "https://github.com/ThiagoGrabe/nd0821-c2-build-model-workflow-starter.git#src"
   # Set this to null if you are running in prod
   project_name: nyc_airbnb
   experiment_name: development
