--- a/components/get_data/conda.yml
+++ b/components/get_data/conda.yml
@@ -3,10 +3,11 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - pip=20.3.3
-  - requests=2.24.0
-  - mlflow=1.14.1
+  - python=3.10.0
+  - pip=22.3.1
+  - requests=2.26.0
+  - mlflow==2.1.1
   - pandas=1.2.3
   - pip:
-      - wandb==0.10.31
-      - git+https://github.com/udacity/nd0821-c2-build-model-workflow-starter.git#egg=wandb-utils&subdirectory=components
+      - wandb==0.13.9
+      - git+https://github.com/ThiagoGrabe/nd0821-c2-build-model-workflow-starter.git#egg=wandb-utils&subdirectory=components
