--- a/components/test_regression_model/conda.yml
+++ b/components/test_regression_model/conda.yml
@@ -3,10 +3,11 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  - python=3.10.0
   - pandas=1.2.3
-  - pip=20.3.3
-  - mlflow=1.14.1
-  - scikit-learn=0.24.1
+  - pip=22.3.1
+  - mlflow==2.1.1
+  - scikit-learn=1.2
   - pip:
-      - wandb==0.10.31
+      - wandb==0.13.9
       - git+https://github.com/ThiagoGrabe/nd0821-c2-build-model-workflow-starter.git#egg=wandb-utils&subdirectory=components
