--- a/components/train_val_test_split/conda.yml
+++ b/components/train_val_test_split/conda.yml
@@ -3,11 +3,12 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - pip=20.3.3
-  - requests=2.24.0
-  - mlflow=1.14.1
-  - scikit-learn=0.24.1
+  - python=3.10.0
+  - pip=22.3.1
+  - requests=2.26.0
+  - mlflow==2.1.1
+  - scikit-learn=1.2
   - pandas=1.2.3
   - pip:
-      - wandb==0.10.31
+      - wandb==0.13.9
       - git+https://github.com/ThiagoGrabe/nd0821-c2-build-model-workflow-starter.git#egg=wandb-utils&subdirectory=components
