--- a/components/get_data/conda.yml
+++ b/components/get_data/conda.yml
@@ -4,10 +4,14 @@ channels:
   - defaults
 dependencies:
   - python=3.10.0
-  - pip=22.3.1
   - requests=2.26.0
-  - mlflow==2.1.1
-  - pandas=1.2.3
+  - pip=22.3.1
+  - hydra-core=1.3.1
   - pip:
       - wandb==0.13.9
+      - hydra-joblib-launcher==1.2.0
+      - setuptools==66.1.1
+      - protobuf==3.19.0
+      - omegaconf==2.2
+      - mlflow==2.1.1
       - git+https://github.com/ThiagoGrabe/nd0821-c2-build-model-workflow-starter.git#egg=wandb-utils&subdirectory=components
