--- a/config.yaml
+++ b/config.yaml
@@ -3,8 +3,8 @@ main:
   # All the intermediate files will be copied to this directory at the end of the run.
   source_repository: "https://github.com/ThiagoGrabe/nd0821-c2-build-model-workflow-starter.git#src"
   # Set this to null if you are running in prod
-  project_name: nyc_airbnb
-  experiment_name: development
+  project_name: mckinsey
+  experiment_name: mckinsey
   steps: all
 etl:
   sample: "sample1.csv"
@@ -33,7 +33,7 @@ modeling:
     min_samples_leaf: 3
     # Here -1 means all available cores
     n_jobs: -1
-    criterion: mae
+    criterion: squared_error
     max_features: 0.5
     # DO not change the following
     oob_score: true
